<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/back"
    android:id="@+id/colors_gradient"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        >
        <ImageView
            android:id="@+id/close_sheets"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_close"
            android:layout_weight="1"
            android:padding="12dp"
            />
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            >
            <ImageView
                android:id="@+id/icons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_refresh"
                android:layout_marginEnd="5dp"
                />
            <TextView
                android:id="@+id/name_banks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_bank_info"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:fontFamily="@font/font_display"
                />
        </LinearLayout>
        <ImageView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="20dp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/back"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kurs"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:padding="14dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/back"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:paddingTop="22dp"
        android:paddingStart="36dp"
        android:paddingBottom="23dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_valuta"
            android:layout_weight="1"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_sell"
            android:layout_weight="1"
            android:textColor="@color/white"
            />
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_sale"
            android:layout_weight="1"
            android:textColor="@color/white"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/back"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:paddingTop="22dp"
        android:paddingStart="36dp"
        android:paddingBottom="23dp"
        >
        <LinearLayout
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_one"
                android:textColor="@color/white"
                />
            <TextView
                android:id="@+id/rub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_rub_lg"
                android:textColor="@color/white"
                />
        </LinearLayout>
        <TextView
            android:layout_weight="1"
            android:id="@+id/buy_value_currency_rus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_sale_num"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_weight="1"
            android:id="@+id/sale_currency_rus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_sale_num"
            android:textColor="@color/white"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/back"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:paddingTop="22dp"
        android:paddingStart="36dp"
        android:paddingBottom="23dp"
        >
        <LinearLayout
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_one"
                android:textColor="@color/white"
                />
            <TextView
                android:id="@+id/usd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lg_usa"
                android:textColor="@color/white"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/buy_value_currency_usa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name_sale_num"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/sale_value_currency_usa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_sale_num"
            android:textColor="@color/white"
            android:layout_weight="1"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/back"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:paddingTop="22dp"
        android:paddingStart="36dp"
        android:paddingBottom="23dp"
        >
        <LinearLayout
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_one"
                android:textColor="@color/white"
                />
            <TextView
                android:id="@+id/euro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lg_euro"
                android:textColor="@color/white"
                />
        </LinearLayout>
        <TextView
            android:layout_weight="1"
            android:id="@+id/buy_value_currency_euro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_sale_num"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_weight="1"
            android:id="@+id/sale_value_currency_euro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_sale_num"
            android:textColor="@color/white"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/back"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/convertation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="25dp"
        android:text="@string/link"
        android:textSize="10dp"
        />
</LinearLayout>