<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:id="@+id/option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:background="@color/white"
        >
        <LinearLayout
            android:id="@+id/change_mode_currency"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="2dp"
            >
            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/setting_see"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/font_display"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="end"
                >
                <TextView
                    android:id="@+id/mode_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_rezh_all"
                    android:layout_marginEnd="10dp"
                    />
                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:src="@drawable/ic_arrows"
                    android:layout_marginEnd="5dp"
                    android:layout_gravity="center"
                    />

            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:background="@color/black"
            />
        <LinearLayout
            android:id="@+id/change_currency_default"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_currency"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/font_display"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_gravity="center"
                >
                -<TextView
                android:id="@+id/currency_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_currency"
                android:layout_marginEnd="10dp"

                />
                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:src="@drawable/ic_arrows"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    />


            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:background="@color/black"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="4dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/font_display"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_gravity="center"
                >

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>


        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:background="@color/black"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/write_telega"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintTop_toBottomOf="@+id/option"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        android:layout_marginTop="100dp"
        android:gravity="start"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic__telegram"
            android:paddingStart="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/telegram"
            android:textStyle="bold"
            android:fontFamily="@font/font_display"
            android:textColor="@color/blue_sky"
            android:textSize="17dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>